@@ -4,12 +4,45 @@ Hungarian hyphenation patterns (v20090612)
 
 % from https://github.com/nagybence/huhyphn/
 % ------------------------------------------
-% Huhyphn - hungarian hyphenation patterns v20090612
+% Huhyphn - hungarian hyphenation patterns v20110815
 %
-% Copyright (C) 2003-2008, Bence Nagy <nagybence@tipogral.hu>
-% This file can be distributed under the terms of the
-% GNU General Public License version 2.
+% ***** BEGIN LICENSE BLOCK *****
+% Version: MPL 1.1/GPL 2.0/LGPL 2.1
+%
+% The contents of this file are subject to the Mozilla Public License Version
+% 1.1 (the "License"); you may not use this file except in compliance with
+% the License. You may obtain a copy of the License at
+% http://www.mozilla.org/MPL/
+%
+% Software distributed under the License is distributed on an "AS IS" basis,
+% WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+% for the specific language governing rights and limitations under the
+% License.
+%
+% The Original Code is the Huhyphn - hungarian hyphenation patterns.
+%
+% The Initial Developer of the Original Code is
+% Bence Nagy.
+% Portions created by the Initial Developer are Copyright (C) 2003
+% the Initial Developer. All Rights Reserved.
+%
+% Contributor(s):
+%   Bence Nagy <bence.nagy@gmail.com>
+%
+% Alternatively, the contents of this file may be used under the terms of
+% either the GNU General Public License Version 2 or later (the "GPL"), or
+% the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+% in which case the provisions of the GPL or the LGPL are applicable instead
+% of those above. If you wish to allow use of your version of this file only
+% under the terms of either the GPL or the LGPL, and not to allow others to
+% use your version of this file under the terms of the MPL, indicate your
+% decision by deleting the provisions above and replace them with the notice
+% and other provisions required by the GPL or the LGPL. If you do not delete
+% the provisions above, a recipient may use your version of this file under
+% the terms of any one of the MPL, the GPL or the LGPL.
+%
+% ***** END LICENSE BLOCK *****
 %
 % Encoding: UTF8
 %
-\message{Huhyphn - hungarian hyphenation patterns v20090612}
+\message{Huhyphn - hungarian hyphenation patterns v20110815}
