@@ -1,3 +1,7 @@
+2011-08-17 (#589)
+- Updated Hungarian patterns from their repository (no content change).
+- Changed licence for Hungarian patterns from GPL into MPL 1.1/GPL 2.0/LGPL 2.1.
+
 2011-08-16 (#585, #586)
 - Changed licence for Italian patterns from LGPL into LPPL
 
